Fornecedor + Correções